# OrderFlow-V7

./: .gitignore  .pre-commit-config.yaml  ATAS_EXPORTER_README.md  CHANGELOG.md  COMPLIANCE.md  MIGRATION_CHECKLIST.md  Makefile  OrderFlow V6 策略诊断与改进报告 (1).txt  OrderFlow V6 策略诊断与改进报告.txt  OrderFlow-V6项目说明书_修订_2.md  README.md  SCHEMA_decision.json  SCHEMA_execution.json  SCHEMA_features.json  SCHEMA_model.json  cleanup_and_create_pr.sh  order_flow_v_6_todo.md  order_flow_v_7_项目说明书.md  order_flow_v_7_项目说明书（前瞻版，含工程对比）.md  pyproject.toml  工程日志_order_flow_v_6_（_2025_10_15_）.md  工程日志_order_flow_v_6_（_2025_10_17_).md
.github/: pr_body_cleanup.md  pull_request_template.md
data/: __init__.py
data_contract/: README.md  loader.py
decision/: __init__.py  directional_classifier.py  engine.py
docs/: ARCHITECTURE.md  DATA_PIPELINE.md  INTERFACE_WHITELIST.md  MIGRATION_NOTES.md  MIGRATION_V6_TO_V7.md  OrderFlow V6 — 任务卡片库V1.1.md  PHASE3_COMPLETION.md  README.md  TODO_V7.md  TODO_V7_1.md  V7_PATCH_MEMO.md  traceability.md  工程日志_order_flow_v_6_(_2025_10_18_).md  工程日志_order_flow_v_6_（_2025_10_15_）.md  工程日志_order_flow_v_6_（_2025_10_17_).md  工程日志_order_flow_v_6_（_2025_10_23_）.md  工程日志_order_flow_v_6_（_2025_10_24_).MD  工程日志_order_flow_v_7_（_2025_10_28_).md
execution/: __init__.py  switch_policy.yaml
features/: __init__.py
governance/: CONTROL_costs.yaml  CONTROL_naming.md  CONTROL_switch_policy.yaml  RULES_library.yaml  RULES_validation.yaml  SCHEMA_data.json  SCHEMA_decision.json  SCHEMA_execution.json  SCHEMA_features.json  SCHEMA_model.json  SCHEMA_validation.json  (+1 more)
(+207 files in other folders)
