[tool.poetry]
name = "orderflow-v6"
version = "0.1.0"
description = "OrderFlow V6 quantitative trading strategy"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0"
numpy = "^1.24"
scikit-learn = "^1.3"
hmmlearn = "^0.3"
statsmodels = "^0.14"
ccxt = "^4.0"
pyarrow = "^15.0"
pyyaml = "^6.0"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.12"
ruff = "^0.1"
mypy = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
